--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 apply from: "$project.rootDir/keystore/secret.gradle"
 apply from: "$project.rootDir/tools/version.gradle"
@@ -102,6 +102,8 @@ ext {
     hamcrest_version = '1.3'
     support_test_runner = '0.5'
     mockito_version = '2.+'
+    autovalue_version = '1.2'
+    autovalue_gson = '0.5.0'
 }
 
 dependencies {
@@ -172,5 +174,9 @@ dependencies {
     compile "com.evernote:android-job:$jobs_version"
     // stetho
     compile "com.facebook.stetho:stetho:$stetho_version"
-
+    // autovalue
+    provided "com.google.auto.value:auto-value:$autovalue_version"
+    apt         "com.google.auto.value:auto-value:$autovalue_version"
+    provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson"
+    apt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson"
 }
