--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     compile "com.android.support:preference-v7:$support_version"
     compile "com.android.support:preference-v14:$support_version"
     compile "com.android.support:design:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
     compile "com.android.support:support-vector-drawable:$support_version"
     compile "com.android.support.constraint:constraint-layout:$constraint_version"
     // dagger2
