--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,8 @@ ext {
     support_test_runner = '0.5'
     mockito_version = '2.+'
     autovalue_version = '1.2'
-    autovalue_gson = '0.5.0'
+    autovalue_gson_version = '0.5.0'
+    dotsindicator_version = '1.0.1'
 }
 
 dependencies {
@@ -178,6 +179,8 @@ dependencies {
     // autovalue
     provided "com.google.auto.value:auto-value:$autovalue_version"
     apt         "com.google.auto.value:auto-value:$autovalue_version"
-    provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson"
-    apt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson"
+    provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
+    apt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
+
+    compile "com.tbuonomo.andrui:viewpagerdotsindicator:$dotsindicator_version"
 }
